test/integration/bad/err-bare-type-close-square.stan
functions {
  array[ real foo(int n) { return n; }
}
model {
}
